# DD2356

./: LICENSE.md  README.md
Assignment 1/Exercise 1/: CMakeLists.txt  spmv.c
Assignment 1/Exercise 3/: CMakeLists.txt  benchmark.c  clockgranularity.c
Assignment 2/Exercise 1/: CMakeLists.txt  main.cpp
Assignment 2/Exercise 2/: CMakeLists.txt  dynamic_output  guided  guided_output  out  parallel_output_guided  static_output  stream.cpp
Assignment 2/Exercise 3/: CMakeLists.txt  main.cpp
Assignment 2/Exercise 4/: CMakeLists.txt  DFTW_1.cpp
Assignment 2/Exercise 5/: CMakeLists.txt  main.cpp
Assignment 3/E1/: CMakeLists.txt  main.cpp
Assignment3/E2/: CMakeLists.txt  blockingbinary.cpp  blockinglinear.cpp  gather.cpp  nblockinglinear.cpp  reduce.cpp  sequential.cpp
Assignment3/E3/: CMakeLists.txt  ping_pong.cpp
